# antop

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md
.github/workflows/: rust.yml
src/: app.rs  cli.rs  discovery.rs  fetch.rs  main.rs  metrics.rs  ui.rs
src/ui/: formatters.rs  mod.rs  widgets.rs
