[package]
name = "antop"
version = "0.1.0"
edition = "2024"
license = "MIT"

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
glob = "0.3"
ratatui = "0.29"
crossterm = "0.27"
anyhow = "1.0"
dirs = "5.0"
futures = "0.3.31"
clap = { version = "4", features = ["derive"] }
humansize = "2"
