[package]
name = "antop"
version = "0.1.4"
edition = "2024"
license = "MIT"
description = "A TUI application for monitoring antnode instances. Discovers nodes via log files, fetches metrics (resource usage, peers, bandwidth, etc.), calculates network speeds, and displays the information in a terminal dashboard with sparklines."

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1"
glob = "0.3"
ratatui = "0.29"
crossterm = "0.27"
anyhow = "1.0"
dirs = "5.0"
futures = "0.3.31"
clap = { version = "4", features = ["derive"] }
humansize = "2"
chrono = { version = "0.4", features = ["serde"] }
