[package]
name = "antop"
version = "0.2.0"
edition = "2024"
license = "MIT"
description = "A TUI application for monitoring antnode instances. Discovers nodes via log files, fetches metrics (resource usage, peers, bandwidth, etc.), calculates network speeds, and displays the information in a terminal dashboard with sparklines."

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
regex = "1.10"
glob = "0.3"
ratatui = { version = "0.26", features = ["all-widgets"] }
crossterm = "0.27"
anyhow = "1.0"
dirs = "5.0"
futures = "0.3.31"
clap = { version = "4.4", features = ["derive"] }
shellexpand = "3.1"
humansize = "2.1"
chrono = { version = "0.4", features = ["serde"] }
